{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "10463e33-f746-417a-80de-fe1c13a71cc1",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "71faa955-2980-474a-8bc0-72306e054fb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Prone",
                    "type": "Button",
                    "id": "ec28caf8-c3cb-4e1b-959f-de6af5cd0450",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "c2f6c53d-a688-48a9-b503-108b5562851c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "9044bff7-aaec-4d72-b642-b96956f7ed79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Strafe",
                    "type": "Value",
                    "id": "eba64c6c-f97e-4919-a907-4a8d99c4a452",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Translation",
                    "type": "Value",
                    "id": "4079871a-4b2a-425d-a672-74d6a9a6680a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeanLeft",
                    "type": "Button",
                    "id": "dddd6caf-4066-49cc-b5ef-fe39faea55f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRight",
                    "type": "Button",
                    "id": "8f3ce8eb-688c-43d0-a036-f33985d91049",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lean",
                    "type": "Value",
                    "id": "267ed071-a2b5-4643-acfc-45734543cb69",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1fe2a7ce-7390-4cbd-81c3-c0a0422a0f6c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f82d5ba-832b-4503-ab41-fcb4b6f082ce",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91cbe800-8e5f-4f1e-8ab1-8766bea93e89",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7b31bfd-215e-4506-bdf7-ab7f2085b526",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "11b9193b-b7d5-4ced-8a3f-9b1273f38340",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "e9cdd137-fccb-4e75-8151-29b3f6090e7e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "4a1c103e-6063-40d3-9d88-97b2167e378d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "9da3454f-0a42-46fc-80cf-a60d521802d5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "e6cb743a-5389-4e27-a5fe-f353bc600b7a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "e38f6359-d657-42cf-910f-185750cd1405",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6b38d552-1dd9-4917-a500-47be19516c95",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d90249c3-30c1-4690-bfb8-66c2f1720bd6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "c95f10f2-8acd-4fe3-8527-1041f1720f0e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "061a4757-78f3-4d85-838a-6dfefca3f6f5",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "d5af6d3d-b15e-46b9-80e7-9090463521a8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "09d97d68-a34a-4d85-bb3f-6f595ec38079",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "Value",
                    "id": "cace2a04-20ae-4a58-874d-9d5884f21202",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseY",
                    "type": "Value",
                    "id": "39a7b09a-77b7-4b62-bb0b-ba81f5edc019",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eab3b8de-1ecc-4f5e-a5c2-609e51e254ed",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41868f08-80f5-4314-8f82-002a286b0c0b",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}